# trev

./: .gitignore  .miserc.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.ja.md  README.md  ROADMAP.md  cliff.toml  config.schema.json  dist-workspace.toml  mise.ci.toml  mise.development.toml  mise.toml  release.toml  rustfmt.toml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: md-format.sh  redirect-cargo.sh  rust-format.sh
.claude/rules/: architecture.md  bench.md  demo.md  docs-i18n.md  nvim-plugin.md  rust-lint.md  rust.md
.claude/skills/perf/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
benches/: preview.rs  render.rs  search_engine.rs  search_index.rs  tree.rs
demo/: config.yml  demo.tape  setup.sh
docs/: configuration.md  full-keybinding-override.md  keybindings.md
docs/ja/: configuration.md  full-keybinding-override.md  keybindings.md
nvim-plugin/: README.md
nvim-plugin/lua/trev/: init.lua
nvim-plugin/lua/trev/adapter/: native.lua  snacks.lua  tmux.lua  toggleterm.lua  zellij.lua
nvim-plugin/plugin/: trev.lua
proptest-regressions/ui/: column.txt
specs/001-user-config/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-user-config/checklists/: requirements.md
specs/002-core-tree/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-core-tree/checklists/: requirements.md
specs/005-preview/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/005-preview/checklists/: requirements.md
specs/010-ipc-neovim/: spec.md
specs/010-ipc-neovim/checklists/: requirements.md
specs/011-tui-ratatui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-tui-ratatui/checklists/: requirements.md
specs/012-file-operations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-file-operations/checklists/: requirements.md
specs/013-neovim-ipc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-neovim-ipc/checklists/: requirements.md
specs/013-neovim-ipc/contracts/: ipc-protocol.md
specs/014-git-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-git-integration/checklists/: requirements.md
specs/015-column-layout-design/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-column-layout-design/checklists/: requirements.md
specs/016-smart-sort/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-smart-sort/checklists/: requirements.md
specs/017-config-refinement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-config-refinement/checklists/: requirements.md
specs/017-config-refinement/contracts/: config-schema.md
src/: action.rs  app.rs  cli.rs  config.rs  dirs.rs  error.rs  file_op.rs  git.rs  highlight.rs  input.rs  ipc.rs  lib.rs  main.rs  preview.rs  session.rs  state.rs  terminal.rs  tree.rs  ui.rs  watcher.rs
src/app/: handler.rs  key_parse.rs  key_trie.rs  keymap.rs  pending_keys.rs  state.rs
src/app/handler/: file_op.rs  input.rs  ipc.rs  mouse.rs  preview.rs  search.rs  stat.rs  tree.rs
src/file_op/: clipboard.rs  conflict.rs  executor.rs  mark.rs  selection.rs  trash.rs  undo.rs  yank.rs
src/ipc/: client.rs  paths.rs  server.rs  types.rs
src/preview/: cache.rs  content.rs  highlight.rs  provider.rs  providers.rs  state.rs
src/preview/providers/: diff.rs  external.rs  fallback.rs  image.rs  text.rs
src/state/: tree.rs
src/tree/: builder.rs  search_engine.rs  search_index.rs  sort.rs
src/ui/: column.rs  file_style.rs  help_view.rs  inline_input.rs  modal.rs  preview_view.rs  search_input.rs  status_bar.rs  tree_view.rs
