[package]
name = "trev"
version = "0.1.0"
edition = "2024"
description = "Fast TUI file viewer with tree view, syntax-highlighted preview, and Neovim integration"
license = "MIT"
repository = "https://github.com/nabekou29/trev"
keywords = ["tui", "file-manager", "tree-view", "neovim", "terminal"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["parsing", "regex-onig"] }
two-face = "0.5"

# Preview
content_inspector = "0.2"
lru = "0.16"
terminal-light = "1"
ratatui-image = { version = "10", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.25"
resvg = "0.47"
ansi-to-tui = "8"

# Fuzzy search
nucleo = "0.5"

# File system
ignore = "0.4"
rayon = "1"
walkdir = "2"
globset = "0.4"
notify = "8"
notify-debouncer-mini = "0.7"
trash = "5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"

# Clipboard
arboard = "3"

# File icons
devicons = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"

# Config
dirs = "6"
serde_ignored = "0.1"
schemars = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-chrome = "0.7"

# Utilities
unicode-width = "0.2"
pathdiff = "0.2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
googletest = "0.14"
rstest = "0.26"
tempfile = "3"
tokio-test = "0.4"

[[bench]]
name = "tree"
harness = false

[[bench]]
name = "render"
harness = false

[[bench]]
name = "preview"
harness = false

[lints.rust]
# === Forbidden ===
unsafe_code = "forbid"
future_incompatible = { level = "deny", priority = -1 }

# === Required ===
unused_must_use = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

# === Recommended ===
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
unreachable_pub = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

# === Advanced ===
single_use_lifetimes = "warn"
unused_lifetimes = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"

[lints.clippy]
# === Group rules ===
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# === Restriction (selected) ===
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
float_arithmetic = "deny"

# === Security ===
# NOTE: Using "deny" instead of "forbid" because any "forbid" in [lints.clippy]
# causes clippy to treat ALL group lints as command-line forbid level, which
# conflicts with derive macros that emit #[allow(clippy::pedantic)] (e.g. clap).
transmute_ptr_to_ptr = "deny"
cast_ptr_alignment = "deny"

# === Output control ===
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"

# === Performance ===
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
redundant_clone = "deny"

# === Function design ===
too_many_arguments = "deny"
cognitive_complexity = "deny"

# === Allowed ===
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_docs_in_private_items = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
